# colled

./: CMakeLists.txt  README.md
inc/: client.h  client_sockets.h  editor.h  file_utils.h  server.h  server_sockets.h
src/: client.c  client_sockets.c  editor.c  file_utils.c  server.c  server_sockets.c
